# newProjecrtTemplate

./: README.md  pyproject.toml
