[tool.poetry]
name = "newprojecrttemplate"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Tree = "^0.2.4"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
